# eeg-seed-IV

./: Advanced_EEG_Emotion_Classification.ipynb  DOCUMENTATION.md  IMPORT_ERRORS_FIXED.md  README.md  SYSTEM_OVERVIEW.md  SYSTEM_SUMMARY.md  advanced_deep_eeg_classifier.py  clean_eeg_dataset.csv  clean_eeg_results.csv  comprehensive_analysis.py  deep_learning_model.py  eeg_emotion_classifier.py  emotion_recognition_model.py  example_conversion.py  index.html  main.py  matTocsv.py  optimized_eeg_classifier.py  pyproject.toml  realtime_eeg_classifier.py  run_complete_analysis.py  simple_output.csv  simple_output1.csv  start_server.bat  tempCodeRunnerFile.py
models/EEG_Models/: eeg_emotion_classifier_fixed.py
models/cnn_medical/: advanced_ensemble.py  cnn_medical_grade.py  (+3 more)
reports/: PROJECT_SUMMARY.md  README_MEDICAL_CNN.md
saved_models/: selected_features_11.npy  selected_features_13.npy  selected_features_15.npy  selected_features_17.npy  selected_features_19.npy  selected_features_21.npy  selected_features_23.npy  selected_features_25.npy  selected_features_27.npy  selected_features_29.npy  selected_features_31.npy  selected_features_33.npy  selected_features_35.npy  selected_features_37.npy  selected_features_39.npy  selected_features_41.npy  selected_features_43.npy  selected_features_45.npy  selected_features_47.npy  selected_features_49.npy  selected_features_5.npy  selected_features_7.npy  selected_features_9.npy
temp/: ADVANCED_README.md  Advanced_EEG_Emotion_Classification.ipynb  EEG_SYSTEM_README.md  README.md  advanced_deep_eeg_classifier.py
(+2168 files in other folders)
