[project]
name = "eeg-seed-iv"
version = "1.0.0"
description = "Medical-grade emotion recognition system using SEED-IV EEG dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.26.0,<2.2.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "torch>=2.0.0",
    "joblib>=1.3.0",
    "tensorflow>=2.18.1",
    "keras>=3.0.0",
]
